added few new endpoints for earthquakes
