# src/presentation/EarthquakeController.ts
@@ -1,4 +1,4 @@
-import {controller, httpPost, request, response} from "inversify-express-utils";
+import {controller, httpGet, httpPost, queryParam, request, requestParam, response} from "inversify-express-utils";
 import * as express from "express";
 import {inject} from "inversify";
 import TYPES from "../types";
@@ -14,6 +14,29 @@ export class EarthquakeController {
         try {
             await this._earthquakeService.saveEarthquakeFeed();
             res.status(200);
+        } catch(error) {
+            res.status(400).json(error);
+        }
+    }
+
+    @httpGet("/getEarthquakeById/:id")
+    public async getEarthquakeById (@request() req: express.Request,@requestParam("id") id: number, @response() res: express.Response) {
+        try {
+            const earthquakeSearchResultDto = await this._earthquakeService.getEarthquakeById(id);
+            res.status(200).json(earthquakeSearchResultDto);
+        } catch(error) {
+            res.status(400).json(error);
+        }
+    }
+
+    @httpGet("/getAllEarthquakes/:page/:rowsPerPage")
+    public async getAllEarthquakes (@request() req: express.Request,
+                                    @requestParam("page") page: number,
+                                    @requestParam("rowsPerPage") rowsPerPage: number,
+                                    @response() res: express.Response) {
+        try {
+            const earthquakeSearchResultDto = await this._earthquakeService.getAllEarthquakes(page, rowsPerPage);
+            res.status(200).json(earthquakeSearchResultDto);
         } catch(error) {
             res.status(400).json(error);
         }
